:recycle: AfterSchoolResponse부분 리펙토링